crates/glyph-cli/tests/corpus/valid/type_level_lookup.glyph
type RiskLevel = <"one of: low, medium, high">

skill assess(risk: RiskLevel = "medium")
    description: "Assess change risk."
    flow:
        "Inspect the change."
        "Assign risk."
