crates/glyph-cli/tests/corpus/invalid/case-violation/type_snake_case.glyph
type link_mode = <"snake-case type name is illegal">

skill demo()
    description: "Carrier."
    flow:
        return <"x">
